fix scrolling error attempt 3, add overflow-y:hidden to layout-content

--- a/_sass/includes/styles.scss
+++ b/_sass/includes/styles.scss
@@ -247,6 +247,7 @@ a {
   float: right;
   padding-bottom: 20px;
   overflow-x: hidden;
+  overflow-y: hidden;
   border: none;
   p, li, a {
     line-height: 1.8rem;
