--- a/_sass/root/variables.scss
+++ b/_sass/root/variables.scss
@@ -4,7 +4,7 @@ $wrapper-width: 968px;
 $header-width: 270px;
 $header-height: 620px; // 650 for portfolio 
 $section-width: 640px;
-$section-height: 700px;
+$section-height: 768px;
 
 
 $layout-header-top-height: 260px;
